--- a/public/doorbell.html
+++ b/public/doorbell.html
@@ -11,30 +11,30 @@
 </head>
 <body>
   <header>
-    ADI Doorbell
+    <a href="http://adicu.com/">ADI</a> Doorbell
   </header>
 
-  <div role="main">
-    Current
-    <ul>
-      <lh>Upcoming:</lh>
-    </ul>
+  <div id="main">
+    <button id="ringer">Event title Here blah</button>
+
+    <div id="upcoming-cont">
+      <h2 id="upcoming-header">Upcoming Events:</h2>
+      <ul id="upcoming">
+        <li class="">Upcoming event <time>Date</time></li>
+      </ul>
+    </div>
   </div>
-
-  <footer>
-
-  </footer>
 
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js">')</script>
 
   <script src="/static/js/script.js"></script>
 
   <script>
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.j
     s.parentNode.insertBefore(g,s)}(document,'script'));
   </script>
 </body>
