--- a/public/doorbell.html
+++ b/public/doorbell.html
@@ -15,27 +15,22 @@
   </header>
 
   <div id="main">
-    <button id="ringer">Event title Here blah</button>
+    <button id="ringer"><!-- Event name here --></button>
 
     <div id="upcoming-cont">
       <h2 id="upcoming-header">Upcoming Events:</h2>
       <ul id="upcoming">
-        <li class="">Upcoming event <time>Date</time></li>
+        <!--<li>Upcoming event <time>Date</time></li>-->
       </ul>
     </div>
   </div>
 
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.1.min.js">')</script>
+  <script src="/js/jquery-1.7.2.min.js"></script>
+  <script src="/js/underscore-min.js"></script>
+  <script src="/js/backbone-min.js"></script>
 
-  <script src="/static/js/script.js"></script>
+  <script src="/js/script.js"></script>
 
-  <script>
-    var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.j
-    s.parentNode.insertBefore(g,s)}(document,'script'));
-  </script>
 </body>
 </html>
